@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: PTYTextView.m,v 1.37 2003-03-04 01:20:38 ujwal Exp $
+// $Id: PTYTextView.m,v 1.38 2003-03-14 22:53:02 yfabian Exp $
 /*
  **  PTYTextView.m
  **
@@ -31,6 +31,7 @@
 #define DEBUG_METHOD_TRACE    0
 #define GREED_KEYDOWN         1
 
+#import "iTerm.h"
 #import "PTYTextView.h"
 #import "PTYSession.h"
 
@@ -231,6 +232,7 @@
     [super drawRect: rect];
 
     // if we have a data source, ask it to supply the text
+#if USE_CUSTOM_DRAWING
     if(dataSource != nil)
     {
 	int numLines, i, lineOffset;
@@ -286,6 +288,7 @@
             aRect.origin.y += lineHeight;
 	}
     }
+#endif
 }
 
 
